--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,15 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="icon" href="<%= BASE_URL %>favicon.ico" />
 		<link rel="stylesheet" href="mdb/css/mdb.dark.min.css" />
+		<link rel="stylesheet" href="mdb/css/i.styles.css" />
 		<link rel="stylesheet" href="mdb/css/sidenav.min.css" />
 		<script src="https://kit.fontawesome.com/5c7ab6fd50.js" crossorigin="anonymous"></script>
 
@@ -20,6 +27,10 @@
 		</noscript>
 		<div id="app"></div>
 		<!-- built files will be auto injected -->
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
 		<script src="mdb/js/mdb.min.js"></script>
+
+
 	</body>
 </html>
